--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,10 +30,11 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794286.md#1">【翻墙必看】林郑等4港高官难逃美国制裁</a><br>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795179.md#1">消息：美即将公布新规 扩大对华为出售限制</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795019.md#1">海南高院前副院长张家慧前夫被免职</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794919.md#1">伊朗国营电视台主播辞职：原谅我说谎13年</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795003.md#1">美中贸易协议签署在即 中方做哪些主要让步</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794286.md#1">【翻墙必看】林郑等4港高官难逃美国制裁</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794587.md#1">胁迫王立强谎称被收买 中国商人讲稿曝光</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794534.md#1">河北禁蒸馒头炸丸子以改善污染？网民嘲讽</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794396.md#1">陕西前副省长冯新柱微信建开心团 专门寻乐</a><br>
@@ -41,12 +42,12 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794080.md#1">制裁香港官员 美议员承诺向国务院提交名单</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793882.md#1">【拍案惊奇】美击杀模式曝光 对伊战略适用中俄</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793929.md#1">台湾大选结果 美媒：凸显中共对外干预失败</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793944.md#1">疫情恐扩散 武汉各大医院最高防疫级别戒备</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794484.md#1">程晓容：中共最新反腐电视片说明什么？</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794386.md#1">各省两会临近 北京信访局清场 访民被控制</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794195.md#1">西宁地陷9死10失踪 救人男孩母亲遇难</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794164.md#1">涉论文抄袭 新疆大学一博士被撤销学位</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794062.md#1">疑武汉隐瞒疫情 港媒实地探访遭扣查</a><br>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793944.md#1">疫情恐扩散 武汉各大医院最高防疫级别戒备</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793955.md#1">武汉肺炎疑现人传人 夫妻先后发病</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790802.md#1">中共外交部胡言乱语实录</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788549.md#1">田蕊妮不再续约无线 杜汶泽笑言：替TVB难过</a><br>
@@ -87,13 +88,12 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792093.md#1">广东高层多空降 分析：北京忌惮地方势力</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792015.md#1">程晓容：贵州女学生贫病去世 粉碎中共谎言</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792084.md#1">美媒：不必北京同意 台湾经济可持续成长</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791916.md#1">泰国现首例武汉肺炎 专家忧病毒扩散</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791676.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/20200114666-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791676.md#1">【拍案惊奇】坠楼前场面被拍到 港男自杀7疑点</a><br>1月13日一早，8点多，位于香港油塘高 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787878.md#1">年末岁首 中国人明真相远离中共</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791242.md#1">香港终审法院首席法官 吁法律界挺身护法治</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790689.md#1">人权组织成员被拒入香港 吁抵制中共霸权</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787667.md#1">哈尔滨法轮功学员刘淑梅生前遭受的迫害</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789341.md#1">冤狱14年 山东张志超奸杀案改判无罪</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791766.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/10/9e0d556bcec963c0587ddf34dbb3db62-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791766.md#1">美团CEO删除百度APP 网民跟进删除</a><br>1月13日晚间，大陆美团CEO王兴发文表 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791381.md#1">大陆年轻人近90%是“负翁” 房子车子压顶</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791419.md#1">前白宫官员：初步协议已涉及301核心问题</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791008.md#1">【新闻看点】川普邀200人见证签署 促习守承诺</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791062.md#1">深圳区级国企一晚宴吃16万? 网民：冰山一角</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791071.md#1">初步协议非贸易战终结 第二阶段涉棘手议题</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791730.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2009/08/908011118162208-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791730.md#1">佩洛西贺蔡英文连任 誓言美台共同捍卫人权</a><br>美国国会众议院议长佩洛西1月13日发?...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791643.md#1">贵州前副省长怕被查 四千瓶茅台酒倒马桶</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790948.md#1">苏莱曼尼案震动中共 让领导先走成国人心声</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791616.md#1">美中谈判锋回路转 美方这两人起关键作用</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789882.md#1">中共官媒自曝美中签约后将出现问题</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791387.md#1">专设房屋藏现金2亿多 赖小民自述贪腐细节</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791611.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/6b79086a49edc7c55d2e5d1d649e59ec-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791611.md#1">西宁路面塌陷 致6人死亡16人受伤</a><br>1月13日傍晚，青海西宁市南大街长城?...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791743.md#1">朝井盖内扔鞭炮 甘肃一8岁男童被炸飞</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791555.md#1">大雾黄色预警 河北等地42条高速路封闭</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790437.md#1">西宁医院门口地面塌陷 载人公交车掉进大坑</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790085.md#1">重庆一小区再现坠楼者砸死人 致2死</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789318.md#1">武汉肺炎还有717人接受观察</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791209.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/03/1_meitu_1-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791209.md#1">传翟天临拟复出 汪涵：盗窃学术成果令人不齿</a><br>在网传卷入学术造假风波的翟天临即将 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794138.md#1">每日三退声明精选（2020/01/14）</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791752.md#1">每日三退声明精选（2020/01/13）</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791346.md#1">中共高调“奔小康” 43斤女大学生因贫去世</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791054.md#1">大陆名嘴朱丹：口误让我的主持生涯彻底毁灭</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791322.md#1">吹捧导师崇高师母优美论文 上中国科学期刊</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11782930.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/01/PO_X9843-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11782930.md#1">黄渤饰教练引争议 《中国女排》或无缘新年档</a><br>由香港导演陈可辛执导的《中国女排》 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11783185.md#1">中国C919大飞机因技术瓶颈而延后</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11775957.md#1">西安高中生将老师杀害潜逃 已被抓获</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11779813.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_JX0CF-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br>美国国会一份报告呼吁对侵犯人权行为 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780313.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/1-4-150x120.png"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 施救者三人被警方带走</a><br>今天（9日）中午11时在重庆人和街小?...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791676.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/20200114666-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791676.md#1">【拍案惊奇】坠楼前场面被拍到 港男自杀7疑点</a><br>1月13日一早，8点多，位于香港油塘高 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787878.md#1">年末岁首 中国人明真相远离中共</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791242.md#1">香港终审法院首席法官 吁法律界挺身护法治</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790689.md#1">人权组织成员被拒入香港 吁抵制中共霸权</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787667.md#1">哈尔滨法轮功学员刘淑梅生前遭受的迫害</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789341.md#1">冤狱14年 山东张志超奸杀案改判无罪</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791766.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/10/9e0d556bcec963c0587ddf34dbb3db62-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791766.md#1">美团CEO删除百度APP 网民跟进删除</a><br>1月13日晚间，大陆美团CEO王兴发文表 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791381.md#1">大陆年轻人近90%是“负翁” 房子车子压顶</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791419.md#1">前白宫官员：初步协议已涉及301核心问题</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791008.md#1">【新闻看点】川普邀200人见证签署 促习守承诺</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791062.md#1">深圳区级国企一晚宴吃16万? 网民：冰山一角</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791071.md#1">初步协议非贸易战终结 第二阶段涉棘手议题</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791730.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2009/08/908011118162208-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791730.md#1">佩洛西贺蔡英文连任 誓言美台共同捍卫人权</a><br>美国国会众议院议长佩洛西1月13日发?...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791643.md#1">贵州前副省长怕被查 四千瓶茅台酒倒马桶</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790948.md#1">苏莱曼尼案震动中共 让领导先走成国人心声</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791616.md#1">美中谈判锋回路转 美方这两人起关键作用</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789882.md#1">中共官媒自曝美中签约后将出现问题</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791387.md#1">专设房屋藏现金2亿多 赖小民自述贪腐细节</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791916.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-73408647-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791916.md#1">泰国现首例武汉肺炎 专家忧病毒扩散</a><br>世界卫生组织1月13日表示，泰国发现?...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791743.md#1">朝井盖内扔鞭炮 甘肃一8岁男童被炸飞</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791611.md#1">西宁路面塌陷 致6人死亡16人受伤</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791555.md#1">大雾黄色预警 河北等地42条高速路封闭</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790437.md#1">西宁医院门口地面塌陷 载人公交车掉进大坑</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790085.md#1">重庆一小区再现坠楼者砸死人 致2死</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791209.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/03/1_meitu_1-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791209.md#1">传翟天临拟复出 汪涵：盗窃学术成果令人不齿</a><br>在网传卷入学术造假风波的翟天临即将 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794138.md#1">每日三退声明精选（2020/01/14）</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791752.md#1">每日三退声明精选（2020/01/13）</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791346.md#1">中共高调“奔小康” 43斤女大学生因贫去世</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791054.md#1">大陆名嘴朱丹：口误让我的主持生涯彻底毁灭</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791322.md#1">吹捧导师崇高师母优美论文 上中国科学期刊</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11782930.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/01/PO_X9843-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11782930.md#1">黄渤饰教练引争议 《中国女排》或无缘新年档</a><br>由香港导演陈可辛执导的《中国女排》 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11783185.md#1">中国C919大飞机因技术瓶颈而延后</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11775957.md#1">西安高中生将老师杀害潜逃 已被抓获</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11779813.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_JX0CF-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br>美国国会一份报告呼吁对侵犯人权行为 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780313.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/1-4-150x120.png"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 施救者三人被警方带走</a><br>今天（9日）中午11时在重庆人和街小?...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,879,300 人
+- 共 349,886,324 人
 ```
 </strong>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
